// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuItem rendering renders expected elements 1`] = `
<div
  className="Menu__item Menu--default"
  role="menuitem"
  tabIndex={-1}
/>
`;

exports[`MenuItem rendering renders expected elements when optional properties are set 1`] = `
<div
  aria-disabled={true}
  className="Menu__item Menu--danger Menu--divider TestClass"
  id="test"
  role="menuitem"
  tabIndex={-1}
>
  Text
</div>
`;
